Max character in string